--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,10 @@ switch(locals.page) {
     <%- include('pages/main') %>
     <% break;
 
+    case 'catalog': %>
+    <%- include('pages/catalog') %> 
+    <% break;
+
     case 'about': %>
     <%- include('pages/about') %> 
     <% break;
