--- a/views/pages/admin/addAccount.ejs
+++ b/views/pages/admin/addAccount.ejs
@@ -1,6 +1,6 @@
 <div class="blur-add" onclick="closeMenu()"></div>
 
-<form class="add-admin-menu">
+<form class="add-admin-menu" name="createAccount" method="POST">
     <div class="close-row">
         <span onclick="closeMenu()">
             <svg>
