--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -25,7 +25,7 @@
                 <span class="active" onclick="activeHome(this)">Популярные</span>
                 <span onclick="activeHome(this)">Новинки</span>
                 <span onclick="activeHome(this)">Акции</span>
-                <a href="">Весь каталог</a>
+                <a href="/catalog">Весь каталог</a>
             </div>
         </div>
         <div class="body">
@@ -799,7 +799,6 @@
                     </svg>
                 </div>
             </div>
-
         </div>
         <div class="more">
             <a href="">Все товары</a>
